Added navbar to Details Page

--- a/TravelReview/Views/Reviews/Details.cshtml
+++ b/TravelReview/Views/Reviews/Details.cshtml
@@ -5,6 +5,14 @@
 }
 
 <h2>Details</h2>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav navbar-right">
+            <li>@Html.ActionLink("Index", "Index")</li>
+        </ul>
+    </div>
+</nav>
+
 
 <div>
     <h4>Review</h4>
