--- a/TravelReview/Views/Home/About.cshtml
+++ b/TravelReview/Views/Home/About.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About Page";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Author: Jason Denk</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Jason Denk was born and raised in Cleveland, Ohio.  Overtime, he has come to view life as a collection of experiences and hopes to experience great things and push others to find 
+    the greatness that exists within.  He is an avid snowboarder, a recreational climber and surfer and enjoys activities that help him remain present in the moment.</p> 
+
+<h3>DENK TRAVEL REVIEWS</h3>
+<p> Be it finding a 
+    great place to hang near a beach, finding a great snowboarding location, finding an adventure that pushes your limits, eating some food that blows your mind or experiencing anything
+    that pushes you to be a better person, DENK TRAVEL REVIEWS wants your contributions and hopes you find something you like. </p>
