--- a/TravelReview/Views/Reviews/Details.cshtml
+++ b/TravelReview/Views/Reviews/Details.cshtml
@@ -8,11 +8,10 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <ul class="nav navbar-nav navbar-right">
-            <li>@Html.ActionLink("Index", "Index")</li>
+            <li>@Html.ActionLink("All Reviews", "Index")</li>
         </ul>
     </div>
 </nav>
-
 
 <div>
     <h4>Review</h4>
@@ -52,7 +51,4 @@
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
