--- a/TravelReview/Views/Home/Contact.cshtml
+++ b/TravelReview/Views/Home/Contact.cshtml
@@ -1,17 +1,17 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contact Page";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Reach out if you have something to share!</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Denk Street<br />
+    Cleveland, Ohio<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Support@example.com">DenkTravel@example.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">DenkTravel@example.com</a>
 </address>
