--- a/TravelReview/Views/Home/About.cshtml
+++ b/TravelReview/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "About Page";
 }
-<h2>@ViewBag.Title.</h2>
+<!--About page, modeled off of original about page-->
+<h2 class="Headline">@ViewBag.Title</h2>
 <h3>Author: Jason Denk</h3>
 
 <p>Jason Denk was born and raised in Cleveland, Ohio.  Overtime, he has come to view life as a collection of experiences and hopes to experience great things and push others to find 
