--- a/TravelReview/Views/Home/Contact.cshtml
+++ b/TravelReview/Views/Home/Contact.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Contact Page";
 }
-<h2>@ViewBag.Title.</h2>
+<h2 class="Headline">@ViewBag.Title.</h2>
 <h3>Reach out if you have something to share!</h3>
 
 <address>
