--- a/TravelReview/Views/Reviews/Details.cshtml
+++ b/TravelReview/Views/Reviews/Details.cshtml
@@ -1,10 +1,7 @@
 ﻿@model TravelReview.Models.Review
 
-@{
-    ViewBag.Title = "Details";
-}
 
-<h2>Details</h2>
+<!--Navbar on top of the page-->
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <ul class="nav navbar-nav navbar-right">
@@ -12,11 +9,16 @@
         </ul>
     </div>
 </nav>
+<h2 class="Headline">@Html.DisplayFor(model => model.Location)</h2>
+<h4>@Html.DisplayFor(model => model.Category.Name)</h4>
 
 <div>
-    <h4>Review</h4>
+    
     <hr />
-    <dl class="dl-horizontal">
+    <p>@Html.DisplayFor(model => model.Comment)</p>
+    <hr />
+    <p>Written on @Html.DisplayFor(model => model.Published)</p>
+    @*<dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Category.Name)
         </dt>
@@ -49,6 +51,6 @@
             @Html.DisplayFor(model => model.Published)
         </dd>
 
-    </dl>
+    </dl>*@
 </div>
 
